# stocks

./: CMakeLists.txt  README.md
include/: agent.hpp  exchange.hpp  stock.hpp
src/: agent.cc  exchange.cc  main.cc  stock.cc
